--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -5,3 +5,15 @@ html {
 body {
     height: 100%;
 }
+
+.modal-background {
+    display: block;
+    background-color: black;
+    opacity: .7;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 5000;
+}
